plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.0'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'checkstyle'
	id 'com.diffplug.spotless' version '8.1.0'
    id 'jacoco'
}

group = 'com.tpanh'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += ['-parameters']
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.0'
	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.flywaydb:flyway-database-postgresql'
	implementation 'com.nimbusds:nimbus-jose-jwt:9.37.3'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.testcontainers:testcontainers:1.19.3'
	testImplementation 'org.testcontainers:junit-jupiter:1.19.3'
	testImplementation 'org.testcontainers:postgresql:1.19.3'
    testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

checkstyle {
    toolVersion = "12.2.0" 
    
    configFile = file("${project.projectDir}/config/checkstyle/checkstyle.xml")
    
    maxErrors = 0 
    maxWarnings = 0
}

spotless {
    java {
        target 'src/*/java/**/*.java'
        
        googleJavaFormat().aosp()
        
        removeUnusedImports()
        trimTrailingWhitespace()
        endWithNewline()
    }
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy jacocoTestReport
	reports {
		junitXml.required = false
		html.required = false
	}
}

jacoco {
	toolVersion = "0.8.14"
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
		html.required = true
		csv.required = false
	}
	
	// Verification sẽ chạy riêng khi cần
	
	afterEvaluate {
		classDirectories.setFrom(
			files(classDirectories.files.collect {
				fileTree(dir: it, excludes: [
					'**/dto/**',
					'**/entity/**',
					'**/enums/**',
					'**/config/**',
					'**/exception/**',
					'**/mapper/**',
					'**/repository/**',
					'**/client/**',
					'**/security/**',
					'**/BackendApplication.class',
					'**/*MapperImpl.class'
				])
			})
		)
	}
}

jacocoTestCoverageVerification {
	dependsOn jacocoTestReport
	violationRules {
		rule {
			element = 'CLASS'
			excludes = [
				'**.*Dto',
				'**.*Entity',
				'**.*Enum',
				'**.*Config',
				'**.*Exception*',
				'**.*Mapper*',
				'**.*Repository',
				'**.*Client',
				'**.*Filter',
				'**.*Properties',
				'**.*Handler',
				'**.*Controller',
				'**.*BackendApplication'
			]
			limit {
				counter = 'LINE'
				value = 'COVEREDRATIO'
				minimum = 0.80
			}
		}
		
		rule {
			element = 'CLASS'
			excludes = [
				'**.*Dto',
				'**.*Entity',
				'**.*Enum',
				'**.*Config',
				'**.*Exception*',
				'**.*Mapper*',
				'**.*Repository',
				'**.*Client',
				'**.*Filter',
				'**.*Properties',
				'**.*Handler',
				'**.*Controller',
				'**.*BackendApplication'
			]
			limit {
				counter = 'BRANCH'
				value = 'COVEREDRATIO'
				minimum = 0.70
			}
		}
	}
}

task openJacocoReport {
	doLast {
		final def reportPath = file("${buildDir}/reports/jacoco/test/html/index.html")
		if (reportPath.exists()) {
			println "\n✅ JaCoCo HTML Report: ${reportPath.toURI()}"
			println "📊 Mở file này trong trình duyệt để xem coverage report"
		} else {
			println "❌ Coverage report chưa được generate. Chạy: ./gradlew test jacocoTestReport"
		}
	}
}

task verifyCoverage {
	dependsOn test, jacocoTestReport, jacocoTestCoverageVerification
	description = 'Chạy tests, generate coverage report và verify coverage thresholds'
}